--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
 .profile__edit-button {
     width: 24px;
     height: 24px;
-    
+
 }
 
 .card-container {
@@ -60,9 +60,9 @@ header {
 }
 
 .card__img {
-width: 282px;
-height: 282px;
-object-fit: cover;
+    width: 282px;
+    height: 282px;
+    object-fit: cover;
 }
 
 .card__description {
@@ -76,3 +76,53 @@ object-fit: cover;
     height: 19px;
 }
 
+.popup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.popup__container {
+    position: relative;
+    width: 430px;
+    height: 330px;
+    background-color: white;
+    border-radius: 10px;
+    box-sizing: border-box;
+    padding: 35px;
+}
+
+.popup__button-close {
+    position: absolute;
+    left: 440px;
+    bottom: 335px;
+}
+
+.popup_opened {
+    
+}
+
+.popup__container input {
+    width: 355px;
+    border: 0;
+    border-bottom: 1px solid black;
+    padding: 10px 5px;
+    margin-bottom: 25px;
+    box-sizing: border-box;
+}
+
+.popup__button-submit {
+    width: 355px;
+    height: 50px;
+    background-color: black;
+    border-radius: 2px;
+    border: 0;
+    margin-top: 20px;
+
+}
